# streamlit

./: =0.29  =1.17.3  =1.3.2  LICENSE  README.md  pyproject.toml  requirements.txt
1-franquia/: reglin.py
2-qualidade-de-veiculo/: carros.py
3-proleite/: milk.py
4-falha-de-equipamento/: equipamento.py
5-normalidades/.streamlit/: config.toml
