[tool.poetry]
name = "streamlit"
version = "0.1.0"
description = "Projeto utilizando o Streamlit"
authors = ["Thiago <thiagohenriquedelimajaques@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
